# lad-feature-voag-pipeline

./: .dockerignore  .env.example  .gitignore  API_MIGRATION.md  ARCHITECTURE.md  DOCKER.md  Dockerfile.api  Dockerfile.worker  IMPLEMENTATION_SUMMARY.md  debug_output.txt  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  test_imports.py
agent/: __init__.py  cleanup_handler.py  config.py  instruction_builder.py  pipeline.py  test_worker.py  tool_builder.py  worker.py
analysis/: __init__.py  background_runner.py  batch_report.py  batch_report.py.feature  call_report.py  gemini_client.py  gemini_client.py.feature  gemini_config.py  lad_dev.py  lead_bookings_extractor.py  lead_extractor.py  lead_info_extractor.py  merged_analytics.py  merged_analytics.py.feature  old_extractor_test.py  requirements.txt  runner.py  schedule_calculator.py  stage_detector.py  student_extractor.py  student_extractor.py.feature
api/: __init__.py  middleware.py  models.py
auth/: __init__.py  google.py  microsoft.py
batch/: queue_manager.py
data/: kb_cache.json
db/: __init__.py  connection_pool.py  db_config.py  lead_bookings_storage.py  lead_info_storage.py  schema_constants.py
docs/: BATCH_LOGIC.md  CALL_CANCEL_API.md  CANCEL_API.md  DISPATCH_PIPELINE.md  KB_API_TESTING.md  TESTING_GUIDE.md  TEST_WORKER.md  batch_system_architecture.md.resolved  chec.md
recording/: __init__.py  api.py  recorder.py  transcription.py
scripts/: _test_ultravox.py  agent_14_instructions.txt  agent_comparison_output.txt  analyze_schema.py  audit_agents.py  audit_output.txt  (+52 more)
(+295 files in other folders)
